Обновленны последние изменения на удаленном сервере GitHub для совместной работы с нескольких компьютеров.